# learn-liberty

./: Cargo.toml  README.md  TESTING.md
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci-optimization-guide.md  ci.yml
benches/: app_state_bench.rs  graphics_bench.rs
config/: settings.toml
lessons/: 01-rust-basics-and-project-structure.md  02-types-and-graphics-architecture.md  03-traits-and-window-management.md  04-collections-and-graphics-pipeline.md  05-concurrency-and-main-loop.md  06-testing-and-quality-assurance.md  07-package-management-and-dependencies.md  08-documentation-and-code-organization.md  09-performance-and-optimization.md  10-ecosystem-and-future-development.md  README.md
src/: education.rs  graphics.rs  lib.rs  main.rs  state.rs  window.rs
tests/: graphics_tests.rs  integration.rs  lib.rs
