[package]
name = "learn-liberty-app"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.20", features = ["dx12", "metal"] }
winit = "0.29"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "app_state_bench"
harness = false

[[bench]]
name = "graphics_bench"
harness = false
